--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -8,42 +8,24 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.11
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v1
-        with:
-          path: ~\sonar\cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache SonarCloud scanner
-        id: cache-sonar-scanner
-        uses: actions/cache@v1
-        with:
-          path: .\.sonar\scanner
-          key: ${{ runner.os }}-sonar-scanner
-          restore-keys: ${{ runner.os }}-sonar-scanner
+          fetch-depth: 0
       - name: Install SonarCloud scanner
-        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-        shell: powershell
-        run: |
-          New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+        run: dotnet tool install --global dotnet-sonarscanner
         
-      - name: Build and analyze
+      - name: Begin sonarscanner
+        run: dotnet sonarscanner begin /k:"PhilBroderickFS_Sonar-Test" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /o:"philbroderickfs" /d:sonar.cs.opencover.reportsPath="**/coverage.opencover.xml" /d:sonar.cs.vstest.reportsPath=**/*.trx"
+        
+      - name: dotnet build
+        run: dotnet build
+        
+      - name: dotnet test
+        run: dotnet test --settings coverlet.runsettings --logger:trx
+        
+      - name: end sonarscanner
+        run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        shell: powershell
-        run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"PhilBroderickFS_Sonar-Test" /o:"philbroderickfs" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPath="./TestResults"
-          dotnet build
-          dotnet test --no-build --verbosity normal --collect:"XPlat Code Coverage" -r ./TestResults
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
